--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
 <body class="container">
     <header>
-        <section class="row">
-            <div class="col-6">
-                <a href="" style="text-decoration:none">Mehedy Shops</a>
+        <section style="position:-webkit-sticky; position:sticky; top: 0; background-color: rgb(245, 187, 187);"
+            class="row">
+            <div class="col-6 d-flex align-items-center">
+                <i><a href="" style="text-decoration:none"><i class="fas fa-store"></i> Mehedy Shops</a></i>
             </div>
             <div class="col-6">
                 <nav class="navbar text-end navbar-expand-lg navbar-light">
@@ -42,6 +43,18 @@
                 </nav>
             </div>
         </section>
+        <div class="row pt-5 pb-5">
+            <div class="col-md-6 d-flex align-items-center">
+                <div>
+                    <h1>BE THE PENGUINS OF WINTER</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, recusandae.</p>
+                    <button class="btn btn-success"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img class="w-100" src="./images/mehedy.png" alt="">
+            </div>
+        </div>
     </header>
 
 
