--- a/index.html
+++ b/index.html
@@ -58,6 +58,53 @@
     </header>
 
 
+    <main>
+        <section class="pt-2 mt-5">
+            <h2>WOMAN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="./images/girl-1.png" class="card-img-top p-2 w-100" alt="...">
+                    <div class="card-body">
+                      <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                    </div>
+                    <div class="card-footer border-0 m-1 bg-white row">
+                      <h2 class="col-6"><b>$ 234</b></h2>
+                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="./images/girl-2.png" class="card-img-top p-2 w-100" alt="...">
+                      <div class="card-body">
+                        <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+                        <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                      </div>
+                      <div class="card-footer border-0 m-1 bg-white row">
+                        <h2 class="col-6"><b>$ 234</b></h2>
+                        <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="./images/girl-3.png" class="card-img-top p-2 w-100" alt="...">
+                      <div class="card-body">
+                        <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+                        <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                      </div>
+                      <div class="card-footer border-0 m-1 bg-white row">
+                        <h2 class="col-6"><b>$ 234</b></h2>
+                        <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
