--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
                 <div class="col">
                   <div class="card h-100">
-                    <img src="./images/girl-1.png" class="card-img-top p-2 w-100" alt="...">
+                    <img src="./images/girl-1.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
                     <div class="card-body">
                       <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
                       <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                      <img src="./images/girl-2.png" class="card-img-top p-2 w-100" alt="...">
+                      <img src="./images/girl-2.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
                       <div class="card-body">
                         <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
                         <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
@@ -90,7 +90,7 @@
                   </div>
                   <div class="col">
                     <div class="card h-100">
-                      <img src="./images/girl-3.png" class="card-img-top p-2 w-100" alt="...">
+                      <img src="./images/girl-3.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
                       <div class="card-body">
                         <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
                         <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
@@ -103,6 +103,52 @@
                   </div>
               </div>
         </section>
+
+
+        <section class="pt-2 mt-5">
+          <h2>MAN JACKET</h2>
+          <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+              <div class="col">
+                <div class="card h-100">
+                  <img src="./images/boy-1.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
+                  <div class="card-body">
+                    <h4 class="card-title"><b>Snowboard Jacket Mens</b></h4>
+                    <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                  </div>
+                  <div class="card-footer border-0 m-1 bg-white row">
+                    <h2 class="col-6"><b>$ 234</b></h2>
+                    <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                  <div class="card h-100">
+                    <img src="./images/boy-3.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
+                    <div class="card-body">
+                      <h4 class="card-title"><b>Man Leather Jackets</b></h4>
+                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                    </div>
+                    <div class="card-footer border-0 m-1 bg-white row">
+                      <h2 class="col-6"><b>$ 234</b></h2>
+                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="./images/boy-2.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
+                    <div class="card-body">
+                      <h4 class="card-title"><b>Man Casual Jackets</b></h4>
+                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
+                    </div>
+                    <div class="card-footer border-0 m-1 bg-white row">
+                      <h2 class="col-6"><b>$ 234</b></h2>
+                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+                    </div>
+                  </div>
+                </div>
+            </div>
+      </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
