--- a/index.html
+++ b/index.html
@@ -2,158 +2,199 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mehedy Shop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/all.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mehedy Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/all.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body class="container">
-    <header>
-        <section style="position:-webkit-sticky; position:sticky; top: 0; background-color: rgb(245, 187, 187);"
-            class="row">
-            <div class="col-6 d-flex align-items-center">
-                <i><a href="" style="text-decoration:none"><i class="fas fa-store"></i> Mehedy Shops</a></i>
+  <header>
+    <section style="position:-webkit-sticky; position:sticky; top: 0; background-color: rgb(245, 187, 187);"
+      class="row">
+      <div class="col-6 d-flex align-items-center">
+        <i><a href="" style="text-decoration:none"><i class="fas fa-store"></i> Mehedy Shops</a></i>
+      </div>
+      <div class="col-6">
+        <nav class="navbar text-end navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#porductg">Product</a>
+                <a class="nav-link" href="#about">About us</a>
+                <a class="nav-link" href="#contact">Contact us</a>
+              </div>
             </div>
-            <div class="col-6">
-                <nav class="navbar text-end navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                <a class="nav-link" href="#porductg">Product</a>
-                                <a class="nav-link" href="#about">About us</a>
-                                <a class="nav-link" href="#contact">Contact us</a>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </section>
-        <div class="row pt-5 pb-5">
-            <div class="col-md-6 d-flex align-items-center">
-                <div>
-                    <h1>BE THE PENGUINS OF WINTER</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, recusandae.</p>
-                    <button class="btn btn-success"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <img class="w-100" src="./images/mehedy.png" alt="">
-            </div>
+          </div>
+        </nav>
+      </div>
+    </section>
+    <div class="row pt-5 pb-5">
+      <div class="col-md-6 d-flex align-items-center">
+        <div>
+          <h1>BE THE PENGUINS OF WINTER</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, recusandae.</p>
+          <button class="btn btn-success"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
         </div>
-    </header>
+      </div>
+      <div class="col-md-6">
+        <img class="w-100" src="./images/mehedy.png" alt="">
+      </div>
+    </div>
+  </header>
 
 
-    <main>
-        <section class="pt-2 mt-5">
-            <h2>WOMAN JACKET</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
-                <div class="col">
-                  <div class="card h-100">
-                    <img src="./images/girl-1.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
-                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                    </div>
-                    <div class="card-footer border-0 m-1 bg-white row">
-                      <h2 class="col-6"><b>$ 234</b></h2>
-                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                      <img src="./images/girl-2.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                      <div class="card-body">
-                        <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
-                        <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                      </div>
-                      <div class="card-footer border-0 m-1 bg-white row">
-                        <h2 class="col-6"><b>$ 234</b></h2>
-                        <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card h-100">
-                      <img src="./images/girl-3.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                      <div class="card-body">
-                        <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
-                        <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                      </div>
-                      <div class="card-footer border-0 m-1 bg-white row">
-                        <h2 class="col-6"><b>$ 234</b></h2>
-                        <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                      </div>
-                    </div>
-                  </div>
-              </div>
-        </section>
-
-
-        <section class="pt-2 mt-5">
-          <h2>MAN JACKET</h2>
-          <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
-              <div class="col">
-                <div class="card h-100">
-                  <img src="./images/boy-1.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                  <div class="card-body">
-                    <h4 class="card-title"><b>Snowboard Jacket Mens</b></h4>
-                    <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                  </div>
-                  <div class="card-footer border-0 m-1 bg-white row">
-                    <h2 class="col-6"><b>$ 234</b></h2>
-                    <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                  <div class="card h-100">
-                    <img src="./images/boy-3.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title"><b>Man Leather Jackets</b></h4>
-                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                    </div>
-                    <div class="card-footer border-0 m-1 bg-white row">
-                      <h2 class="col-6"><b>$ 234</b></h2>
-                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card h-100">
-                    <img src="./images/boy-2.png" class="card-img-top p-2 w-100 h-75 p-5" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title"><b>Man Casual Jackets</b></h4>
-                      <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, tenetur.</p>
-                    </div>
-                    <div class="card-footer border-0 m-1 bg-white row">
-                      <h2 class="col-6"><b>$ 234</b></h2>
-                      <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
-                    </div>
-                  </div>
-                </div>
+  <main>
+    <section class="pt-2 mt-5">
+      <h2>WOMAN JACKET</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+        <div class="col">
+          <div class="card h-100">
+              <img src="./images/girl-1.png" class="card-img-top p-5 w-100 h-75 " alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
             </div>
-      </section>
-    </main>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/girl-2.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
+            </div>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/girl-3.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
+            </div>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
+    <section class="pt-2 mt-5 mb-5">
+      <h2>MAN JACKET</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/boy-1.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Snowboard Jacket Mens</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
+            </div>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/boy-3.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Man Leather Jackets</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
+            </div>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/boy-2.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+            <div class="card-body">
+              <h4 class="card-title"><b>Man Casual Jackets</b></h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+                tenetur.</p>
+            </div>
+            <div class="card-footer border-0 m-1 bg-white row">
+              <h2 class="col-6"><b>$ 234</b></h2>
+              <button class="btn btn-success  col-6"><i class="fas fa-shopping-cart"></i> BYE NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <div class="row mt-5 mb-5 flex-md-row-reverse">
+      <div class="col-md-7 p-3">
+        <img src="./icon/shops.png" class="w-100" alt="">
+      </div>
+      <div class="col-md-5 p-3">
+        <div class="row text-center text-md-start p-3">
+          <div class="col-md-3 d-flex align-items-center justify-content-center">
+            <img src="./icon/icon-1.png" style="width: 70px;" alt="">
+          </div>
+          <div class="col-md-9">
+            <h4><b>Find the Perfect Fit</b></h4>
+            <p>Everybody is different, which is why we offer styles for every body.</p>
+          </div>
+        </div>
+        <div class="row text-center text-md-start p-3">
+          <div class="col-md-3 d-flex align-items-center justify-content-center">
+            <img src="./icon/icon-2.png" style="width: 70px;" alt="">
+          </div>
+          <div class="col-md-9">
+            <h4><b>Free Exchanges</b></h4>
+            <p>One of the many reasons you can shop with peace of mind.</p>
+          </div>
+        </div>
+        <div class="row text-center text-md-start p-3">
+          <div class="col-md-3 d-flex align-items-center justify-content-center">
+            <img src="./icon/icon-3.png" style="width: 70px;" alt="">
+          </div>
+          <div class="col-md-9">
+            <h4><b>Contact Our Seller</b></h4>
+            <p>They are here to help you. That s quite literally what we pay them for.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
