--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   <main>
     <section class="pt-2 mt-5">
       <h2>WOMAN JACKET</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-info">
         <div class="col">
-          <div class="card h-100">
+          <div class="card h-100 card-div-shadow">
               <img src="./images/girl-1.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
@@ -76,8 +76,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="./images/girl-2.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+          <div class="card h-100 card-div-shadow">
+            <img src="./images/girl-2.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -90,8 +90,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="./images/girl-3.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+          <div class="card h-100 card-div-shadow">
+            <img src="./images/girl-3.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -109,10 +109,10 @@
 
     <section class="pt-2 mt-5 mb-5">
       <h2>MAN JACKET</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4 text-primary">
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-info">
         <div class="col">
-          <div class="card h-100">
-            <img src="./images/boy-1.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+          <div class="card h-100 card-div-shadow">
+            <img src="./images/boy-1.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Snowboard Jacket Mens</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -125,8 +125,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="./images/boy-3.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+          <div class="card h-100 card-div-shadow">
+            <img src="./images/boy-3.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Man Leather Jackets</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -139,8 +139,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
-            <img src="./images/boy-2.png" class="card-img-top p-5 w-100 h-75 images-just-responsive" alt="...">
+          <div class="card h-100 card-div-shadow">
+            <img src="./images/boy-2.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Man Casual Jackets</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -157,11 +157,11 @@
 
 
     <div class="row mt-5 mb-5 flex-md-row-reverse">
-      <div class="col-md-7 p-3">
-        <img src="./icon/shops.png" class="w-100" alt="">
+      <div class="col-md-7 p-3 d-flex align-items-center justify-content-center">
+          <img src="./icon/shops.png" class="w-100" alt="">
       </div>
       <div class="col-md-5 p-3">
-        <div class="row text-center text-md-start p-3">
+        <div class="last-div-shadow row text-center text-md-start p-3 mt-3 mb-3">
           <div class="col-md-3 d-flex align-items-center justify-content-center">
             <img src="./icon/icon-1.png" style="width: 70px;" alt="">
           </div>
@@ -170,7 +170,7 @@
             <p>Everybody is different, which is why we offer styles for every body.</p>
           </div>
         </div>
-        <div class="row text-center text-md-start p-3">
+        <div class="last-div-shadow row text-center text-md-start p-3 mt-3 mb-3">
           <div class="col-md-3 d-flex align-items-center justify-content-center">
             <img src="./icon/icon-2.png" style="width: 70px;" alt="">
           </div>
@@ -179,7 +179,7 @@
             <p>One of the many reasons you can shop with peace of mind.</p>
           </div>
         </div>
-        <div class="row text-center text-md-start p-3">
+        <div class="last-div-shadow row text-center text-md-start p-3 mt-3 mb-3">
           <div class="col-md-3 d-flex align-items-center justify-content-center">
             <img src="./icon/icon-3.png" style="width: 70px;" alt="">
           </div>
