--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 
   <main>
-    <section class="pt-2 mt-5">
+    <section class="pt-2 mt-5" id="porductg">
       <h2>WOMAN JACKET</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4 text-info">
         <div class="col">
           <div class="card h-100 card-div-shadow">
-              <img src="./images/girl-1.png" class="card-img-top p-5 w-100 h-75 " alt="...">
+            <img src="./images/girl-1.png" class="card-img-top p-5 w-100 h-75 " alt="...">
             <div class="card-body">
               <h4 class="card-title"><b>Woman Leather Jacket</b></h4>
               <p class="card-text text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
@@ -156,9 +156,9 @@
     </section>
 
 
-    <div class="row mt-5 mb-5 flex-md-row-reverse">
+    <div class="row mt-5 mb-5 flex-md-row-reverse" id="about">
       <div class="col-md-7 p-3 d-flex align-items-center justify-content-center">
-          <img src="./icon/shops.png" class="w-100" alt="">
+        <img src="./icon/shops.png" class="w-100" alt="">
       </div>
       <div class="col-md-5 p-3">
         <div class="last-div-shadow row text-center text-md-start p-3 mt-3 mb-3">
@@ -191,7 +191,19 @@
       </div>
     </div>
   </main>
-
+  <footer>
+    <div class="p-5 d-flex align-items-center justify-content-center" style="background-color: rgb(238, 194, 242); border-radius: 20px;">
+      <div>
+        <h2>LET'S STAY IN TOUCH</h2>
+        <h5>Get updates on sales, specials and more</h5>
+        <input class="w-50" type="text">
+        <button class="btn btn-primary">SUBMIT</button>
+      </div>
+    </div>
+    <div class="text-center pt-4">
+      <small>@2021. Mehedy shop</small>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
